<resources>
    <string name="app_name">SQLAriketa</string>
    <string name="Izena_hint">Izena Sartu</string>
    <string name="Desk_hint">Deskribapena Sartu</string>
    <string name="Title">Programazio lengoaiak</string>
    <string name="bistaratu">Datuak Bistaratu</string>
    <string name="Gehitu">Gehitu</string>
    <string name="Ezabatu">Ezabatu</string>
    <string name="Aldatu">Aldatu</string>
    <string name="Iragazi">Iragazi</string>
    <string name="Garbitu">Garbitu</string>
    <string name="idSartu">ID Sartu</string>
    <string name="izenaSartu">Izena Sartu</string>

    <string-array name="languages_array">
        <item>Aukeratu</item>
        <item>Euskera</item>
        <item>Gaztelania</item>
        <item>Ingelesa</item>
    </string-array>
    <string-array name="toolbar_options">
        <item>Aukeratu</item>
        <item>Gehitu</item>
        <item>Atera</item>
    </string-array>
    <string name="softwareLibrea">Software Librea</string>
    <string name="gorde">Gorde</string>
    <string name="editatu">Editatu</string>
    <string name="ezabatu">Ezabatu</string>
    <string name="dialogmsg">Ziur zaude datuak gorde gura dituzula?</string>
    <string name="bai">Bai</string>
    <string name="ez">Ez</string>
    <string name="gordeEginDa">Datuak gorde egin dira</string>

</resources>